# qlcplus

./: ALTERNATIVE_MIDI_IMPLEMENTATION_COMPLETE.md  CONFIGURABLE_DEBOUNCE_IMPLEMENTATION.md  FADE_TIME_PRESERVATION_FIX.md  FINAL_ANALYSIS_AND_RECOMMENDATION.md  FINAL_THREAD_SAFETY_FIX.md  FIXTURE_GROUP_FOLDERS_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  MIDI_MAPPING_CORRECTION.md  MIDI_STEP_SELECTION_DEBUG.md  MIDI_STEP_SELECTION_TEST.md  SEGFAULT_FIX_COMPLETE.md  VELOCITY_BASED_MIDI_CORRECTION.md  macx-agl-fix.pri  race_condition_fix_test.md  test_context_sensitive.qxw  test_context_sensitive_autosave_20250624_154231_autosave_20250624_154531_autosave_20250624_154831_autosave_20250624_155131.qxw  test_context_sensitive_autosave_20250624_155224.qxw  test_function_selection_fix.cpp  test_plugins.sh  test_segfault_fix.md  test_segfault_fix.sh  variables.pri
.augment/env/: setup.sh
engine/src/: CMakeLists.txt.rej  autosavemanager.cpp  autosavemanager.h  avolitesd4parser.cpp  channelsgroup.h  doc.cpp  doc.h  fixturegroup.cpp  fixturegroup.h  inputoutputmap.cpp  inputoutputmap.h  mastertimer-unix.cpp  qlcfile.cpp  qlcfile.h  qlcfixturedefcache.cpp  qlcfixturedefcache.h  qlcmodifierscache.cpp  qlcmodifierscache.h  rgbmatrix.cpp  rgbmatrix.h  rgbscriptscache.cpp  rgbscriptscache.h  src.pro
engine/test/: CMakeLists.txt.rej
hotplugmonitor/: hotplugmonitor.pro
hotplugmonitor/src/: hpmprivate-iokit.cpp
main/: main.cpp  main.pro
plugins/: CMakeLists.txt
plugins/E1.31/: e131controller.h  e131plugin.cpp
plugins/artnet/src/: artnetcontroller.h  artnetplugin.cpp
plugins/dmxusb/src/: dmxusbopenrx.cpp  dmxusbwidget.cpp  enttecdmxusbopen.cpp  qtserial-interface.cpp
plugins/hid/: hidplugin.cpp
plugins/midi/src/macx/: coremidioutputdevice.cpp
plugins/ola/: CMakeLists.txt  ola.pro  ola_compat.h  olaio.h  olaoutthread.cpp  olaoutthread.h  qlclogdestination.cpp  qlclogdestination.h
qmlui/: app.cpp  app.cpp.rej  app.h  contextmanager.cpp  fixturegroupeditor.cpp  fixturemanager.cpp  fixturemanager.h  mainview3d.cpp  qmlui.pro  qmlui.qrc  rgbmatrixeditor.cpp  rgbmatrixeditor.h  uimanager.cpp.rej  uimanager.h.rej
qmlui/qml/: ActionsMenu.qml.rej  MainView.qml  TreeNodeDelegate.qml  UISettingsEditor.qml  UISettingsEditor.qml.rej  qmldir
qmlui/qml/fixturesfunctions/: FixtureGroupManager.qml  RGBMatrixEditor.qml
qmlui/qml/virtualconsole/: VCCueListProperties.qml
qmlui/virtualconsole/: midistepcontroller.cpp  midistepcontroller.h  vccuelist.cpp  vccuelist.h
ui/src/: CMakeLists.txt  CMakeLists.txt.rej  addfixture.cpp  addrgbpanel.cpp  addrgbpanel.h  addrgbpanel.ui  app.cpp  app.cpp.rej  app.h  app.h.rej  appsettings.cpp  appsettings.h  audioeditor.cpp  chasereditor.cpp  collectioneditor.cpp  collectioneditor.h  consolechannel.cpp  efxeditor.cpp  fixturemanager.cpp  fixturemanager.h  fixturetreewidget.cpp  fixturetreewidget.h  functionmanager.cpp  functionselection.cpp  functionselection.h  functionstreewidget.cpp  functionstreewidget.h  preferencesdialog.cpp  preferencesdialog.h  rgbmatrixeditor.cpp  rgbmatrixeditor.ui  sceneeditor.cpp  scripteditor.cpp  src.pro  videoeditor.cpp
ui/src/showmanager/: audioitem.cpp  showeditor.cpp
ui/src/virtualconsole/: addvcbuttonmatrix.cpp  vccuelist.cpp  vccuelist.h  vccuelistproperties.cpp  vccuelistproperties.h  vccuelistproperties.ui  vcmatrix.cpp
ui/test/: test.pro
ui/test/autosave/: autosave.pro  autosave_test.cpp  autosave_test.h  test.sh
webaccess/src/: src.pro
